@@ -1,10 +1,9 @@
-sourceSets {
-    create("generator")
+plugins {
+    id("module.conventions")
+    id("submodule.conventions")
 }
 
-tasks.register<JavaExec>("generate") {
-    classpath(sourceSets["generator"].runtimeClasspath)
-    jvmArgs("--enable-preview")
-    mainClass.set("overrungl.opengl.OpenGLGenerator")
-    workingDir = File("src/main/java/overrungl/opengl")
+overrunglModule {
+    artifactName = "overrungl-opengl"
+    publishInfo = Artifact.OPENGL
 }
